
	- move include files outside #ifdef PTYTTY_HELPER in proxy.C.

0.1  Wed Jan 25 22:56:36 CET 2006
	- added the C API.
        - small freebsd patch to fdpass.C by Thierry Thomas.
        - added eg/c-sample.c.
        - small fixes to the C api.
        - restructured source files.
        - added set*uid checks to ptytty.m4.

0.0
        - originally cloned from rxvt-unicode.
